--- a/practica2/estilo.css
+++ b/practica2/estilo.css
@@ -1,3 +1,5 @@
+/******** HOJA DE ESTILOS Javier Lopez de Juan ********/
+
 /*Especifidad: 001*/
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -14,24 +16,12 @@ h1 {
     text-transform: uppercase;
     padding:2em;    
     }
-/*Especificidad: 001*/
-table{
-	grid-column:4;
-}
+
 /*Especificidad: 001*/
 td{
    border: 0.063em solid #000000;
 }
-/*Especificidad: 002*/
-section img{
-	grid-area:espaciocentro;
-    border-radius: 0.125em;
-    background-color: #000 ;
-    color:#e56db1;
-    padding:0.063em;
-    width:95%;
-    height:95%;  
-  }
+
 /*Especificidad: 001*/
 a{
 	color: #e56db1 ; 
@@ -47,13 +37,6 @@ border: 0.063em solid;
 h2 {
   padding:2em;      
   }
-/* Especifidad 001 */
-section{
-	display: grid;
-	grid-template-areas: 'arriba arriba arriba arriba arriba arriba arriba arriba arriba'
-						 'despues despues despues despues despues despues despues despues despues'
-                         'espacioiz espacioiz espacioiz imagen1 espaciocentro imagen2 espaciod espaciod espaciod';                         
-}
 /*Especificidad: 011*/
 a:hover{
 background-color: #e56db1;
