--- a/prueba/Ejercicio6.css
+++ b/prueba/Ejercicio6.css
@@ -20,15 +20,16 @@ h1 {
 	width:100%;
 	grid-area:arriba;
     }
+	
 /*Especificidad: 001*/
-table{
-    font-size: 30px; 
-	background-color: #e56db1;
-	color:#000000;
-	margin:auto;
-	width:20%;
-	border: 0.2em solid #000000;
+label{
+    font-size: 2em; 
   }
+fieldset{
+	display:grid;
+	grid-template-columns:1fr 1fr 1fr 1fr 1fr 1fr;
+	
+}
 /* Especifidad 001 */
 form{
 	grid-area:x;
